# tips

./: .dockerignore  .env.builder.example  .env.example  .gitignore  AA_BUNDLER_SETUP.md  BUILDER_PLAYGROUND_INTEGRATION.md  CLAUDE.md  COMPLETE_GUIDE.md  Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.node-reth  Dockerfile.node-reth.local  ENGINE_API_INTEGRATION_INSTRUCTIONS.md  Justfile  QUICK_START_BUILDER_PLAYGROUND.md  README.md  README_SETUP.md  SETUP.md  START_HERE.md  USEROP_INTEGRATION.md  USEROP_LOCAL_SETUP.md  check-ui.sh  docker-compose.tips.yml  docker-compose.yml  genesis-rollup.json  genesis.json  justfile  jwt.hex  mouse  new tip  run-builder.sh  run-ingress.sh  test.txt  test_user_op.json  wallets.json
.cargo/: config.toml
.sqlx/: query-2a6e99270e35859fd7a4ce4deeeb652f7d67c3e78b2749b00ff5a3814ed6664f.json  query-4ec98cc82ef5dcab381aa633ccb2de483ddcb4e5af564ae1540be844a26d8262.json  query-52f447984afbdae140544fa7b3ea24f5ada0f9165676cbb07917d188495f0361.json  query-7d72b87eddd39d131ce083dcbff9e6c5fbdde1083aff6e4dca20508f177df536.json  query-826a88b9935ea357802cacbda56b2af0ca0c77a0ea6fdf4251178803993c7113.json  query-85798b03a3dff0196ee1c64b1b21f74c6ac9046b4ccad4f1fc9876a7355616b0.json  query-92e3773f27ca3d15e43cd2a48c40898572b4ea735f94ebd9df04b86b67eab713.json  query-9f1f7117bba639cdc922de4e6870a34cd49c3e2826662fa3fe8af597d1e9e90b.json  query-b2f3046a06d9b8a76c59a38122a8fdc5ab2ae76baab1082b4d2b4c4ef01d2f74.json  query-c279740d623e06b3e3add31a6c15085bde3207756fe914837cef0cd12b864366.json  query-ca6a250821d4542720578da20aa9cf31e808fa8dcbd701c75246dbdc95c58946.json  query-cf5c6dfdacbfdf9be15883d3277b26862e79068817db6f3a69a1baedea6c6b9f.json  query-d4b57b891b30188fabbf6dc1ce030ef1bdc4864ab96716517692725202da6030.json
context/: Base Account Pull Request Guidelines.md  Mini TDD - TIPS 4337 Bundler .docx
crates/aa-bundler/: Cargo.toml  README.md
crates/aa-bundler/src/: config.rs  consumer.rs  converter.rs  lib.rs  types.rs
crates/account-abstraction-core/: Cargo.toml  README.md
crates/account-abstraction-core/core/src/: account_abstraction_service.rs  kafka_mempool_engine.rs  lib.rs  mempool.rs  reputation_service.rs  types.rs  userop.rs  v06.rs  v07.rs
crates/account-abstraction-core/core/src/entrypoints/: mod.rs  v06.rs  v07.rs  version.rs
crates/account-abstraction-core/core/src/mempool/: mempool_impl.rs  mod.rs  pool.rs
crates/account-abstraction-core/src/: lib.rs
crates/account-abstraction-core/src/domain/: events.rs  mempool.rs
crates/account-abstraction-core/src/factories/: kafka_engine.rs
crates/account-abstraction-core/src/infrastructure/in_memory/: mempool.rs
crates/account-abstraction-core/src/services/: mempool_engine.rs
crates/audit/: Cargo.toml  Dockerfile
crates/audit/src/: archiver.rs  lib.rs  metrics.rs  publisher.rs  reader.rs  storage.rs  types.rs
crates/audit/tests/: integration_tests.rs  s3_test.rs
crates/audit/tests/common/: mod.rs
crates/builder/: Cargo.toml  README.md  TESTING.md
crates/builder/src/: bundle.rs  kafka_consumer.rs  lib.rs  main.rs  userops.rs  userops_pipeline.rs
crates/builder/tests/: integration_tests.rs  userop_e2e_test.rs
crates/builder/tests/common/: mod.rs
crates/bundle-pool/: Cargo.toml
crates/bundle-pool/src/: lib.rs  pool.rs  source.rs
crates/bundle-pool/tests/: integration_tests.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/datastore/: Cargo.toml
crates/datastore/migrations/: 1757444171_create_bundles_table.sql  1758262637_create_simulations_table.sql
crates/datastore/src/: lib.rs  postgres.rs  traits.rs
crates/datastore/src/entities/: bundle.rs  mod.rs
crates/datastore/tests/: datastore.rs  integration_tests.rs
crates/e2e-tests/: Cargo.toml  METRICS.md  README.md
crates/e2e-tests/src/: lib.rs  mock_provider.rs
crates/e2e-tests/src/client/: mod.rs  tips_rpc.rs
crates/e2e-tests/src/fixtures/: transactions.rs
crates/e2e-tests/tests/: integration_tests.rs  test_01_basic_bundle.rs  test_basic_bundle.rs
crates/ingress/: Cargo.toml  Dockerfile
crates/ingress/src/: main.rs  queue.rs  service.rs  writer.rs
crates/rpc-exex/: Cargo.toml
crates/rpc-exex/src/: lib.rs  main.rs  validation.rs
crates/shadow-boost/: Cargo.toml  Dockerfile  README.md
crates/shadow-boost/src/: auth.rs  config.rs  main.rs  proxy.rs  server.rs
crates/simulator/: Cargo.toml  Dockerfile
crates/simulator/src/: config.rs  core.rs  engine.rs  exex.rs  lib.rs  listener.rs  main.rs  mempool.rs  playground.rs  publisher.rs  service.rs  state.rs  types.rs  worker_pool.rs
crates/simulator/src/config/: mod.rs  playground.rs  simulator_node.rs
crates/simulator/src/listeners/: exex.rs  mempool.rs  mod.rs
crates/simulator/tests/: bundle_simulator_impl_test.rs  error_handling_test.rs  integration_test.rs  publisher_test.rs  run_common_tests.rs  worker_pool_test.rs
crates/simulator/tests/common/: builders.rs  fixtures.rs  mock_bundle_simulator.rs  mocks.rs  mod.rs
crates/simulator/tests/common_tests/: builders_test.rs  fixtures_test.rs  mock_bundle_simulator_test.rs  mod.rs
crates/simulator/tests/unit/: core_test.rs  error_handling_test.rs  mod.rs  types_test.rs
crates/system-tests/: Cargo.toml  METRICS.md  README.md
crates/system-tests/src/client/: tips_rpc.rs
crates/system-tests/src/load_test/: config.rs  load.rs  metrics.rs  mod.rs  output.rs  poller.rs  sender.rs  setup.rs  tracker.rs
crates/system-tests/tests/: integration_tests.rs
crates/system-tests/tests/common/: kafka.rs  s3.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
crates/user-op-pool/: Cargo.toml
crates/user-op-pool/src/: lib.rs  pool.rs  source.rs
crates/user-op-pool/tests/: integration_tests.rs
crates/writer/: Cargo.toml
crates/writer/src/: main.rs
docker/: aa-bundler-consumer-kafka-properties  aa-bundler-consumer-kafka-properties.local  aa-bundler-producer-kafka-properties  aa-bundler-producer-kafka-properties.local  audit-kafka-properties  audit-kafka-properties.local  builder-kafka-properties  host-ingress-audit-kafka-properties  (+12 more)
docs/: API.md  (+11 more)
(+96 files in other folders)
