[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/tips"
repository = "https://github.com/base/tips"

[workspace]
members = ["crates/datastore", "crates/audit", "crates/ingress-rpc", "crates/maintenance", "crates/ingress-writer"]
resolver = "2"

[workspace.dependencies]
tips-datastore = { path = "crates/datastore" }
tips-audit = { path = "crates/audit" }
tips-maintenance = { path = "crates/maintenance" }
tips-ingress-writer = { path = "crates/ingress-writer" }

# Reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
base-reth-flashblocks-rpc = { git = "https://github.com/base/node-reth", rev = "a1ae148a36354c88b356f80281fef12dad9f7737" }

# alloy
alloy-primitives = { version = "1.3.1", default-features = false, features = [
    "map-foldhash",
    "serde",
] }
alloy-rpc-types = { version = "1.0.35", default-features = false }
alloy-consensus = { version = "1.0.35" }
alloy-provider = { version = "1.0.35" }
alloy-rpc-types-mev = "1.0.35"

# op-alloy
op-alloy-rpc-types = { version = "0.20.0", default-features = false }
op-alloy-network = { version = "0.20.0", default-features = false }
op-alloy-consensus = { version = "0.20.0", features = ["k256"] }

tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
url = "2.5.7"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
eyre = "0.6.12"
async-trait = "0.1.89"
serde_json = "1.0.143"
dotenvy = "0.15.7"
testcontainers = { version = "0.23.1", features = ["blocking"] }
testcontainers-modules = { version = "0.11.2", features = ["postgres", "kafka", "minio"] }
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }

# Kafka and S3 dependencies
rdkafka = { version = "0.37.0", features = ["libz-static", "ssl-vendored"] }
aws-config = "1.1.7"
aws-sdk-s3 = "1.106.0"
aws-credential-types = "1.1.7"
bytes = { version = "1.8.0", features = ["serde"] }

# tips-ingress
backon = "1.5.2"
op-revm = { version = "10.1.0", default-features = false }
revm-context-interface = "10.2.0"
alloy-signer-local = "1.0.36"

opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "http-proto",
    "http-json",
    "reqwest-client",
    "trace",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.0"
opentelemetry-datadog = { version = "0.19.0", features = ["reqwest-client"] }
opentelemetry-semantic-conventions = "0.31.0"
