[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/tips"
repository = "https://github.com/base/tips"

[workspace]
members = ["crates/audit", "crates/ingress-rpc", "crates/bundle-pool", "crates/core"]
resolver = "2"

[workspace.dependencies]
tips-audit = { path = "crates/audit" }
tips-bundle-pool = { path = "crates/bundle-pool" }
tips-core = { path = "crates/core" }

# Reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }

# alloy
alloy-primitives = { version = "1.3.1", default-features = false, features = [
    "map-foldhash",
    "serde",
] }
alloy-consensus = { version = "1.0.37" }
alloy-provider = { version = "1.0.37" }
alloy-serde = "1.0.41"

# op-alloy
op-alloy-network = { version = "0.22.0", default-features = false }
op-alloy-consensus = { version = "0.22.0", features = ["k256", "serde"] }
op-alloy-rpc-types = { version = "0.22.0", default-features = true}
op-alloy-flz = {  version = "0.13.1" }

tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.89"
serde_json = "1.0.143"
dotenvy = "0.15.7"
testcontainers = { version = "0.23.1", features = ["blocking"] }
testcontainers-modules = { version = "0.11.2", features = ["postgres", "kafka", "minio"] }
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Kafka and S3 dependencies
rdkafka = { version = "0.37.0", features = ["libz-static", "ssl-vendored"] }
aws-config = "1.1.7"
aws-sdk-s3 = "1.106.0"
aws-credential-types = "1.1.7"
bytes = { version = "1.8.0", features = ["serde"] }

# tips-ingress
backon = "1.5.2"
op-revm = { version = "12.0.0", default-features = false }
revm-context-interface = "10.2.0"
alloy-signer-local = "1.0.36"
