[package]
name = "account-abstraction-core"
version.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
path = "core/src/lib.rs"
[dependencies]
alloy-serde = { version = "1.0.41", default-features = false }
serde.workspace = true
alloy-rpc-types.workspace = true
alloy-provider.workspace = true
op-alloy-network.workspace = true
alloy-primitives = { workspace = true }
reth-rpc-eth-types.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
async-trait = { workspace = true }
alloy-sol-types.workspace= true
anyhow.workspace = true
rundler-types = { git = "https://github.com/rayyan224/rundler", package = "rundler-types" }
rundler-pool  = { git = "https://github.com/rayyan224/rundler", package = "rundler-pool" }
rundler-sim = { git = "https://github.com/rayyan224/rundler", package = "rundler-sim" }
rundler-provider = { git = "https://github.com/rayyan224/rundler", package = "rundler-provider" }
rundler-task = { git = "https://github.com/rayyan224/rundler", package = "rundler-task" }
rundler-utils = { git = "https://github.com/rayyan224/rundler", package = "rundler-utils" }
tracing.workspace = true
tracing-subscriber.workspace = true


[dev-dependencies]
alloy-primitives.workspace = true
serde_json.workspace = true
wiremock.workspace = true
