[package]
name = "tips-audit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tips-archiver"
path = "src/bin/archiver.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
alloy-primitives = { workspace = true }
clap = { workspace = true }

# Additional dependencies for Kafka and S3
rdkafka = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
md5 = { workspace = true }
futures = "0.3.31"

[dev-dependencies]
tokio-test = "0.4.4"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
eyre = { workspace = true }