[package]
name = "tips-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rblib.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-node.workspace = true
reth-optimism-rpc.workspace = true
