[package]
name = "tips-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rblib.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-node.workspace = true
reth-optimism-rpc.workspace = true
account-abstraction-core.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
anyhow.workspace = true
serde.workspace = true
