[package]
name = "tips-bundle-pool"
version.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

tips-audit = { path = "../audit" }
tips-core = { path = "../core" }

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
alloy-signer-local.workspace = true

