[package]
name = "tips-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
op-alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
