[package]
name = "datastore"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
alloy-rpc-types-mev = { workspace = true }
alloy-primitives = { workspace = true }
serde_json = { workspace = true }