[package]
name = "tips-e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tips-audit = { workspace = true }
tips-core = { workspace = true }

alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-signer = "1.0.37"
alloy-consensus = { workspace = true }
alloy-network = "1.0.37"

tokio = { workspace = true }
async-trait = { workspace = true }

aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }

rdkafka = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }

uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

reqwest = { version = "0.12.12", features = ["json"] }
bytes = { workspace = true }
hex = "0.4.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

