[package]
name = "ingress"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpsee = { workspace = true }
alloy-rpc-types-mev = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-rpc-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
