[package]
name = "tips-rpc-exex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reth-exex.workspace = true
reth.workspace = true
eyre.workspace = true
tracing.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-primitives.workspace = true
tokio.workspace = true
futures.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-revm.workspace = true
reth-optimism-evm.workspace = true
reth-rpc-eth-types.workspace = true
revm-context-interface.workspace = true
alloy-signer-local.workspace = true
clap.workspace = true
reth-node-api.workspace = true 
op-alloy-rpc-types.workspace = true
tips-common.workspace = true
