[package]
name = "tips-simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tips-simulator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tips-datastore.workspace = true
tips-audit.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
chrono.workspace = true
eyre.workspace = true
futures-util.workspace = true

# Alloy for Ethereum types
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-mev.workspace = true
alloy-eips.workspace = true
op-alloy-consensus.workspace = true

# Reth ExEx dependencies
reth.workspace = true
reth-exex.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-execution-types.workspace = true
reth-node-api.workspace = true
reth-evm.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true

# Additional dependencies for simulation
std-semaphore = "0.1"
tokio-util = { version = "0.7", features = ["time"] }
hex = "0.4"
rdkafka.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
testcontainers.workspace = true
testcontainers-modules.workspace = true
