[package]
name = "tips-system-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tips-audit-lib = { workspace = true }
tips-core = { workspace = true }
tips-ingress-rpc-lib.workspace = true

alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-primitives = { workspace = true, features = ["map-foldhash", "serde"] }
alloy-signer-local = { workspace = true }

op-alloy-network = { workspace = true }
op-alloy-consensus = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }

rdkafka = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }

uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

reqwest = { version = "0.12.12", features = ["json"] }
bytes = { workspace = true }
hex = "0.4.3"
rand = "0.8"
dashmap = "6.0"
indicatif = "0.17"
rand_chacha = "0.3"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["std", "derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true, features = ["std"] }
anyhow = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
rdkafka = { workspace = true, features = ["tokio", "libz"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
op-alloy-consensus = { workspace = true, features = ["std", "k256", "serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
clap = { version = "4.5", features = ["std", "derive", "env"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt", "env-filter", "json"] }
aws-config = { workspace = true, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { workspace = true, features = ["rustls", "default-https-client", "rt-tokio"] }

[dev-dependencies]
serial_test = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
testcontainers = { workspace = true, features = ["blocking"] }
testcontainers-modules = { workspace = true, features = ["postgres", "kafka", "minio"] }

