[package]
name = "tips-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true